--- a/ui/package.json
+++ b/ui/package.json
@@ -45,20 +45,20 @@
     "angular-cli": "^1.0.0-beta.21",
     "lw-ng2-select": "^1.2.0",
     "ng-html2js": "^3.0.0",
+    "ng2-bootstrap": "^1.1.16",
     "ng2-ckeditor": "^1.1.5",
     "ng2-custom-validation": "^1.2.2",
     "ng2-datepicker": "^1.1.1",
     "ng2-easy-table": "^0.1.18",
     "ng2-inline-editor": "^0.1.1-alpha.9",
     "ng2-restangular": "^0.1.21",
-    "ng2-validation": "^3.0.1"
+    "ng2-validation": "^3.0.1",
+    "ui-router-ng2": "^1.0.0-beta.3"
   },
   "repository": {
     "type": "git",
-    "url":""
+    "url": ""
   },
   "author": "Java the Hut",
-
-
   "description": "AppBuilder UI"
 }
