--- a/ui/package.json
+++ b/ui/package.json
@@ -4,22 +4,7 @@
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
-    "start": "ng serve",
-    "@angular/router": "3.2.1",
-    "angular2-toaster": "^1.0.2",
-    "animate.css": "^3.5.2",
-    "bootstrap": "^4.0.0-alpha.5",
-    "core-js": "^2.4.1",
-    "font-awesome": "^4.7.0",
-    "jquery": "^3.1.1",
-    "ng2-animate": "^1.2.1",
-    "ng2-bootstrap": "^1.1.16",
-    "ng2-ckeditor": "^1.1.4",
-    "ng2-validators": "^1.5.2",
-    "rxjs": "5.0.0-beta.12",
-    "ts-helpers": "^1.1.1",
-    "ui-router-ng2": "^1.0.0-beta.3",
-    "zone.js": "^0.6.23"
+    "start": "ng serve"
   },
   "devDependencies": {
     "@angular/compiler-cli": "2.2.1",
