--- a/ui/package.json
+++ b/ui/package.json
@@ -28,6 +28,7 @@
   "main": "index.js",
   "dependencies": {
     "angular-cli": "^1.0.0-beta.21",
+    "bootstrap": "^4.0.0-alpha.5",
     "lw-ng2-select": "^1.2.0",
     "ng-html2js": "^3.0.0",
     "ng2-bootstrap": "^1.1.16",
