--- a/ui/package.json
+++ b/ui/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "angular-cli": "^1.0.0-beta.21",
     "bootstrap": "^4.0.0-alpha.5",
+    "font-awesome": "^4.7.0",
     "lw-ng2-select": "^1.2.0",
     "ng-html2js": "^3.0.0",
     "ng2-bootstrap": "^1.1.16",
